# [package]
# name = "libzfs-rs"
# version = "0.1.0"
# authors = ["Christian Schwarz <me@cschwarz.com>"]
# build = "build.rs"
# links = "zfs"

[workspace]
members = [ "libzfs-bindings", "libzfs-rs" ]

# [dependencies]
# nvpair-sys = "0.1"

# [build-dependencies]
# bindgen = "0.36.0"
# pkg-config = "0.3.9"
